--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="assets/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="assets/style.css" type="text/css">
+    
 
     <title>Lucia Retamales</title>
 
@@ -25,7 +26,7 @@
 
 <div class="page-wrapper">
     <header>
-        <div class="brand animate"><a href=""><img src="assets/img/LogoWIP.gif" alt=""></a></div>
+        <div class="brand animate"><a href=""><img src="assets/img/Logo_WIP.gif" style="width: 155px;" alt=""></a></div>
         <nav>
             <ul class="navigation animate">
                 <li><a href="" data-toggle="modal" data-target="#modal-about-us">About Me</a></li>
@@ -117,19 +118,19 @@
                         <div class="col-md-7 col-sm-7">
                             <section>
                                 <h3>Shortly About Me</h3>
-                                <p>I’m Lucía Retamales, a freelance motionographer from Argentina. My job is to bring your ideas, projects, and products into living motion!
-                                    I have extensive knowledge of animation and video editing software such as Adobe After Effects and Adobe Animate.
+                                <p>I’m Lucia Retamales, an animator from Argentina. I bring narratives, advertisements and indie projects to motion! I have vast experience in all the steps of producing an animated video. From storyboarding and character animation to composition and animated graphics.
                                 </p>
                                 <p>
-                                    Do you need a video to promote your crowdfunding campaign? An opening cutscene for a video game or webcomic? 
-                                    Or do you have an existing video but want that extra level of polish on it?
+                                    As a freelancer, I do cutscenes and promotions of comics, games, books and more.
+                                    As an art director, I lead my very capable team towards doing narrative-driven advertisements (2D and 3D), for clients such as Merge Mansion and Angry Birds Journey.
+                                    I’m also looking forward doing 3D indie short films with my team in the near future.
                                 </p>
                             </section>
                             <section>
                                 <h3>My Skills</h3>
                                 <div class="skill">
-                                    <h4>Webdesign</h4>
-                                    <aside>80%</aside>
+                                    <h4>2D Animation</h4>
+                                    <aside>90%</aside>
                                     <figure class="bar">
                                         <div class="bar-active width-80"></div>
                                         <div class="bar-background"></div>
@@ -137,7 +138,7 @@
                                 </div>
                                 <!--end skill-->
                                 <div class="skill">
-                                    <h4>Photography</h4>
+                                    <h4>Compositing</h4>
                                     <aside>100%</aside>
                                     <figure class="bar">
                                         <div class="bar-active width-100"></div>
@@ -146,8 +147,8 @@
                                 </div>
                                 <!--end skill-->
                                 <div class="skill">
-                                    <h4>Marketing</h4>
-                                    <aside>60%</aside>
+                                    <h4>Social Media Marketing</h4>
+                                    <aside>80%</aside>
                                     <figure class="bar">
                                         <div class="bar-active width-60"></div>
                                         <div class="bar-background"></div>
@@ -295,7 +296,7 @@
                                     <img src="assets/img/Icon_Video.png" alt="">
                                 </div>
                                 <h3>Video Promotion</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus laoreet sed tellus ut condimentum</p>
+                                <p>Do you need a video to promote your crowdfunding campaign? An opening cutscene for a video game or webcomic?</p>
                             </div>
                             <!--end box-->
                         </div>
@@ -306,7 +307,7 @@
                                     <img src="assets/img/Icon_3D.png" alt="">
                                 </div>
                                 <h3>3D Animation</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus laoreet sed tellus ut condimentum</p>
+                                <p>Projecting existing artwork into 3D or animating new 3D assets for your promotions.</p>
                             </div>
                             <!--end box-->
                         </div>
@@ -317,7 +318,7 @@
                                     <img src="assets/img/Icon_Illos.png" alt="">
                                 </div>
                                 <h3>Animated Illustrations</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus laoreet sed tellus ut condimentum</p>
+                                <p>Layering existing artwork and animating it using After Effects. To give them a sense of movement and action.</p>
                             </div>
                             <!--end box-->
                         </div>
@@ -328,7 +329,7 @@
                                     <img src="assets/img/Icon_Traditional.png" alt="">
                                 </div>
                                 <h3>Traditional Animation</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus laoreet sed tellus ut condimentum</p>
+                                <p>Animating your characters and coloring them traditionally in Adobe Animate.</p>
                             </div>
                             <!--end box-->
                         </div>
@@ -339,7 +340,7 @@
                                     <img src="assets/img/Icon_Comics.png" alt="">
                                 </div>
                                 <h3>Motion Comics</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus laoreet sed tellus ut condimentum</p>
+                                <p>Animating sequences of panels to create an entire animation based on one or more comic pages.</p>
                             </div>
                             <!--end box-->
                         </div>
@@ -350,7 +351,7 @@
                                     <img src="assets/img/Icon_Editing.png" alt="">
                                 </div>
                                 <h3>Documentary Editing</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus laoreet sed tellus ut condimentum</p>
+                                <p>Do you have existing footage and want to edit them into an essay-type video? Or want an extra level of polish on your video?</p>
                             </div>
                             <!--end box-->
                         </div>
@@ -381,19 +382,19 @@
                     <section>
                         <div class="row">
                             <div class="col-md-3 col-sm-3">
-                                <h3>Address</h3>
+                                <h3>Information</h3>
                                 <address>
-                                    4758 Nancy Street<br>
-                                    +1 919-571-2528<br>
-                                    <a href="mailto:hello@example.com">hello@example.com</a>
+                                    Timezone:<br>
+                                    Argentina (GMT-3)<br> <br>
+                                    <a href="https://forms.gle/mKXriaxZCnHCq6zn8">Contact only via <br>Google Form or DMs</a>
                                 </address>
                             </div>
                             <!--end col-md-3-->
                             <div class="col-md-3 col-sm-3">
                                 <h3>Social</h3>
-                                <figure><a href="https://www.instagram.com/imposible.co/" class="icon"><i class="fa fa-instagram"></i>Facebook</a></figure>
+                                <figure><a href="https://www.instagram.com/imposible.co/" class="icon"><i class="fa fa-instagram"></i>Instagram</a></figure>
                                 <figure><a href="https://twitter.com/lumiere_reta" class="icon"><i class="fa fa-twitter"></i>Twitter</a></figure>
-                                <figure><a href="" class="icon"><i class="fa fa-youtube"></i>Youtube</a></figure>
+                                <figure><a href="https://www.youtube.com/@Lucia.Retamales" class="icon"><i class="fa fa-youtube"></i>Youtube</a></figure>
                                 <figure><a href="https://www.linkedin.com/in/lucia-retamales-798281296/" class="icon"><i class="fa fa-linkedin"></i>LinkedIn</a></figure>
                             </div>
                             <!--end col-md-3-->
