--- a/index.html
+++ b/index.html
@@ -385,54 +385,19 @@
                                 <h3>Information</h3>
                                 <address>
                                     Timezone:<br>
-                                    Argentina (GMT-3)<br> <br>
+                                    Argentina (GMT-3)<br>
                                     <a href="https://forms.gle/mKXriaxZCnHCq6zn8">Contact only via <br>Google Form or DMs</a>
                                 </address>
-                            </div>
-                            <!--end col-md-3-->
-                            <div class="col-md-3 col-sm-3">
+                                <br>
                                 <h3>Social</h3>
                                 <figure><a href="https://www.instagram.com/imposible.co/" class="icon"><i class="fa fa-instagram"></i>Instagram</a></figure>
                                 <figure><a href="https://twitter.com/lumiere_reta" class="icon"><i class="fa fa-twitter"></i>Twitter</a></figure>
                                 <figure><a href="https://www.youtube.com/@Lucia.Retamales" class="icon"><i class="fa fa-youtube"></i>Youtube</a></figure>
                                 <figure><a href="https://www.linkedin.com/in/lucia-retamales-798281296/" class="icon"><i class="fa fa-linkedin"></i>LinkedIn</a></figure>
                             </div>
-                            <!--end col-md-3-->
                             <div class="col-md-6 col-sm-6">
-                                <h3>Contact Form</h3>
                                 <form id="form-contact" method="post" class="form clearfix inputs-underline">
-                                    <div class="row">
-                                        <div class="col-md-6 col-sm-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" id="form-contact-name" name="name" placeholder="Your Name" required>
-                                            </div>
-                                            <!--end form-group -->
-                                        </div>
-                                        <!--end col-md-6 col-sm-6 -->
-                                        <div class="col-md-6 col-sm-6">
-                                            <div class="form-group">
-                                                <input type="email" class="form-control" id="form-contact-email" name="email" placeholder="Your Email" required>
-                                            </div>
-                                            <!--end form-group -->
-                                        </div>
-                                        <!--end col-md-6 col-sm-6 -->
-                                    </div>
-                                    <!--end row -->
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <textarea class="form-control" id="form-contact-message" rows="5" name="message" placeholder="Your Message" required></textarea>
-                                            </div>
-                                            <!--end form-group -->
-                                        </div>
-                                        <!--end col-md-12 -->
-                                    </div>
-                                    <!--end row -->
-                                    <div class="form-group clearfix">
-                                        <button type="submit" class="btn pull-right btn-default btn-framed btn-rounded" id="form-contact-submit">Send a Message</button>
-                                    </div>
-                                    <!--end form-group -->
-                                    <div class="form-contact-status"></div>
+                                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScZ2UhtVjQsaIXAk21CaFZA1cyO_0inPiK_TA67YjHTcrRBuw/viewform?embedded=true" width="800" height="760" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                                 </form>
                                 <!--end form-contact -->
                             </div>
